# rust_file_encryption

./: Cargo.toml  README.md
src/: lib.rs  main.rs
