[package]
name = "encrypt-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.0" # or the latest version
aes = "0.8.0"      # or the latest version
hex = "0.4.3"      # for converting between hex and bytes
rand = "0.8.4"     # for generating random numbers